fixed margins for logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>prime Deli</title>
 
     <!--====== FAVICON ICON =======-->
-    <link rel="shortcut icon" type="image/ico" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 
     <!--====== STYLESHEETS ======-->
     <link rel="stylesheet" href="css/normalize.css">
@@ -95,7 +95,7 @@
                 <nav class="navbar">
                     <div class="container">
                        
-                            <a href="index.html" class="navbar-brand" style="padding:0;"><img src="img/small.png" alt=""></a>
+                            <a href="index.html" class="navbar-brand" style="padding:0"><img style="margin-top: -10px;" src="img/small.png" alt=""></a>
                             <a href="index.html" class="navbar-brand white"> <span style="color: white;">Prime </span><span style="color: rgb(109, 5, 5);">Meat</span> </a>
                         </div>
                        
@@ -288,6 +288,9 @@
                             <a href="#"><img src="img/prime logo small.png" alt=""></a>
                         </div>
                         <div class="footer-address">
+                            <p>Discover our sandwich deli, where fresh ingredients and irresistible flavors unite.
+                                 From classic to gourmet, our menu offers something for everyone. Enjoy exceptional
+                                  service and savor mouthwatering sandwiches that will leave you craving more.</p>
                             <p>Ground floor, bole  road,behind sheger building</p>
                             <p><a href=""> Prime Deli Meat</a></p>
                             <p><a href="callto:+8800000001111">+88 000 0000 1111</a></p>
